# LearnOpenGL

./: .gitignore
1. Getting Started/1.5 Hello Triangle/Exercises /2/: CMakeLists.txt
1. Getting Started/1.5 Hello Triangle/Exercises /2/.cache/clangd/index/: boing.c.C17AAB26D1F14D67.idx  clipboard.c.F20F305AD1B6B628.idx  context.c.2CE6E341AF4C2E6A.idx  cursor.c.54229B3354A301FF.idx  egl_context.c.61B72759753C6FBE.idx  egl_context.h.C416AA060E42403B.idx  empty.c.DC16BDDFA460C7B8.idx  events.c.677A0BF0ABAB1855.idx  gamma.c.D41D638BBABDB4E2.idx  gears.c.316D18DBC619BC51.idx  getopt.c.CFBF8FF4144DD24D.idx  getopt.h.F7B9E2F0A641AB6D.idx  gl.h.4F72C0D95F0B0C50.idx  glad.c.067E70AA5BE43D00.idx  glad.h.7F1BD41786FFFF37.idx  glad_gl.c.25FC9F5C9C688E3E.idx  glad_vulkan.c.65B61B4ED1B629DC.idx  glfw3.h.805EF318C77840B0.idx  glfwinfo.c.085F1E357A6BDF6F.idx  glx_context.c.F2236E10AF6552F5.idx  glx_context.h.184DF55B6D1B4F99.idx  heightmap.c.BBCECF87C35E89E4.idx  icon.c.CAD84CCD43895DB4.idx  iconify.c.7BC67BC7BF01A7D0.idx  init.c.C7B14BDCA8FE6D02.idx  input.c.878D47AD1F1E86EF.idx  inputlag.c.0CFFFAF9BD9C575F.idx  internal.h.6BED0B4B4D9375E5.idx  joysticks.c.7DB0FD3518850467.idx  msaa.c.7005D8188AA8EA4E.idx  (+44 more)
1. Getting Started/1.5 Hello Triangle/Exercises /2/src/: main.cpp
1. Getting Started/1.6 Shaders/src/rainbowTriangle/: CMakeLists.txt
1. Getting Started/1.6 Shaders/src/rainbowTriangle/include/: Shader.hpp
1. Getting Started/1.6 Shaders/src/rainbowTriangle/src/: LearnOpenGL  Shader.cpp  main.cpp
1. Getting Started/1.6 Shaders/src/rainbowTriangle/src/Shaders/: fragment.glsl
(+156 files in other folders)
